# a14n

./: .prettierignore  .prettierrc  COMMERCIAL_LICENSE_REQUEST.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  rustfmt.toml  tsconfig.json
.github/: copilot-instructions.md
apps/auth/: Cargo.toml  package.json
apps/auth/.sqlx/migrations/: 20250803171617_init.up.sql
apps/auth/src/: main.rs
apps/web/: .gitignore  package.json  tsconfig.json
apps/web/app/: page.tsx
scripts/: moveFiles.js
