[workspace]
members = ["apps/auth"]
resolver = "3"

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.141", features = ["preserve_order"] }

[workspace.lints.clippy]
# Grupos de lints primero
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Luego override de lints específicos
too_many_arguments = { level = "allow", priority = 0 }
unwrap_used = { level = "deny", priority = 1 }
expect_used = { level = "deny", priority = 1 }
