[workspace]
members = ["apps/auth", "packages/collections"]
resolver = "3"

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.142", features = ["preserve_order"] }
axum = { version = "0.8.4" }
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }
nanoid = { version = "0.4.0" }
chrono = { version = "0.4.41", features = ["serde"] }
svix-ksuid = { version = "0.8.0", features = ["serde"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls-aws-lc-rs",
    "postgres",
] }


[workspace.lints.clippy]
# Grupos de lints primero
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Luego override de lints específicos
too_many_arguments = { level = "allow", priority = 0 }
unwrap_used = { level = "deny", priority = 1 }
expect_used = { level = "deny", priority = 1 }
