[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full", "rt-multi-thread"] }
collections = { path = "../../packages/collections" }
sqlx = { workspace = true, features = [
    "runtime-tokio",
    "tls-rustls-aws-lc-rs",
    "postgres",
] }
